Added more content on FAQs

--- a/FAQs.html
+++ b/FAQs.html
@@ -50,23 +50,44 @@
                                 Questions are given ID references to its respected
                                 answers.
                                 -->
-                                <li><a href="#Answer1">Question 1</a></li>
-                                <li><a href="#Answer2">Question 2</a></li>
-                                <li><a href="#Answer3">Question 3</a></li>
-                                <li><a href="#Answer4">Question 4</a></li>
+                                <li><a href="#Answer1">What is the difference between the basic and full grooming?</a></li>
+                                <li><a href="#Answer2">How are the sizes of dogs determined?</a></li>
+                                <li><a href="#Answer3">How do I book an appointment online?</a></li>
+                                <li><a href="#Answer4">Do you accept walk-ins?</a></li>
 
                         </ul>
                         <h3>Answers</h3>
-                            <ul>
+                            <dl>
                                 <!--
                                 This is where the questions are linked to.
                                 -->
-                                <li>Answer 1</li>
-                                <li>Answer 2</li>
-                                <li>Answer 3</li>
-                                <li>Answer 4</li>
-                                
-                            </ul>
+                                <dt><h3>What is the difference between the basic and full grooming?</h3></dt>
+                                    <dd>The basic grooming consists of bathing, ear cleaning, conditioning treatments and shampooing. The full grooming comes with all of the services mentioned in the pricing page.</dd>
+                                <dt><h3>How are the sizes of dogs determined?</h3></dt>               
+                                    <dd>The sizes are determined by their weight.</dd>
+                                    <table style="width: 75%">
+                                        <tr>
+                                            <th>Size</th>
+                                            <th>Weight</th>
+                                        </tr>
+                                        <tr>
+                                            <td>Small</td>
+                                            <td>15 to 25 pounds</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Medium</td>
+                                            <td>26 to 50 pounds</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Large</td>
+                                            <td>51 to 80 pounds</td>
+                                        </tr>
+                                    </table>
+                                <dt><h3>How do I book an appointment online?</h3></dt>
+                                    <dd>You have to create a profile through our website. Through that, you will be able to gain access to our booking.</dd>
+                                <dt><h3>Do you accept walk-ins?</h3></dt>
+                                    <dd>Yes! However, it is best if you call ahead before visiting us.</dd>
+                            </dl>    
             </div>
         </div>
         <footer>
