--- a/services.html
+++ b/services.html
@@ -46,23 +46,11 @@
 				<h2>Services</h2>
                 <div id="services">
                     <h3><a href="pricing.html">Pricing</a></h3> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Nunc tempor augue at massa varius aliquet. Integer auctor 
-                        hendrerit ex non dapibus. Maecenas sit amet urna vulputate, 
-                        iaculis turpis suscipit, aliquet tortor. In accumsan nec 
-                        nisi sed volutpat.</p>
+                    <p>The is where you can find the general prices for dog grooming.</p>
                     <h3><a href="booking.html">Booking</a></h3>
-                    <p>In accumsan nec augue at massa varius aliquet. Integer auctor 
-                        nisi sed volutpat. Vivamus placerat pharetra lacus, ut lacinia
-                        lectus pellentesque eget. Nunc vestibulum orci nisi, in 
-                        vestibulum justo mattis posuere. Aenean laoreet dolor eu auctor
-                        pretium. Morbi sodales ultrices tortor sed finibus.</p>
+                    <p>Booking lets you book appointments for your dogs.</p>
                     <h3><a href="faqs.html">FAQs</a></h3>
-                    <p>In accumsan nec augue at massa varius alique consectetur 
-                    nisi sed volutpat. Vivamus placerat pharetra lacus, ut lacinia
-                    lectus pellentesque eget. Nunc vestibulum orci nisi, in 
-                    vestibulum justo mattis posuere. Aenean laoreet dolor eu auctor
-                    pretium. Morbi sodales ultrices tortor sed finibus.</p>
+                    <p>Have questions? FAQ's has many of the answers you need.</p>
                 </div>
 			</div>
         </div>
