--- a/testimonials.html
+++ b/testimonials.html
@@ -48,17 +48,17 @@
 				<h2>Testimonials</h2>
                 <div id="gallery">
                 <ul>
-                    <li><img src="Images/puppy1.jpg" width="200" height="200" alt="Dog" onclick="puppy01()">
+                    <li><img src="Images/wendel.jpg" width="200" height="200" alt="Dog" onclick="puppy01()">
                     </li>
-                    <li><img src="Images/puppy2.jpg" width="200" height="200" alt="Dog" onclick="puppy02()">
+                    <li><img src="Images/pickle.jpg" width="200" height="200" alt="Dog" onclick="puppy02()">
                     </li>
-                    <li><img src="Images/puppy3.jpg" width="200" height="200" alt="Dog" onclick="puppy03()">
+                    <li><img src="Images/winston.jpg" width="200" height="200" alt="Dog" onclick="puppy03()">
                     </li>
-                    <li><img src="Images/puppy4.jpg" width="200" height="200" alt="Dog" onclick="puppy04()">
+                    <li><img src="Images/bear.jpg" width="200" height="200" alt="Dog" onclick="puppy04()">
                     </li>
-                    <li><img src="Images/puppy5.jpg" width="200" height="200" alt="Dog" onclick="puppy05()">
+                    <li><img src="Images/bella.jpg" width="200" height="200" alt="Dog" onclick="puppy05()">
                     </li>
-                    <li><img src="Images/puppy6.jpg" width="200" height="200" alt="Dog" onclick="puppy06()">
+                    <li><img src="Images/ami.jpg" width="200" height="200" alt="Dog" onclick="puppy06()">
                     </li>
                  </ul>
                  </div>
