fixed about us link

--- a/signIn.html
+++ b/signIn.html
@@ -124,7 +124,7 @@
 		    <div id="footernav">
                 <ul>
                     <li><a href="signIn.html">Sign in / Register</a></li>
-                    <li><a href="aboutus.html">About Us</a></li>
+                    <li><a href="aboutUs.html">About Us</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="services.html">Services</a>
                     <li><a href="pricing.html">Pricing</a></li>
