--- a/contactus.html
+++ b/contactus.html
@@ -52,7 +52,7 @@
                     </li>
                     
                     <li><h3>Telephone</h3>
-                        <p>(604) 983-0030</p>
+                        <p><a href="tel:604-983-0030">(604) 983-0030</a></p>
                     </li>
                     
                     <li><h3>Email</h3>
