--- a/aboutUs.html
+++ b/aboutUs.html
@@ -47,12 +47,15 @@
                    intensive months, she completed the Pet Groomer Course at Western Dog Grooming School.  
                    Simin has received her PIJAC Canine Specialist Certification and is a Certified Canine Specialist. She 
                    also has her Pet First Aid Certificate and her Professional Pet Groomer Career Diploma. In order to provide
-                   the best experience for dogs, Simin operates in a safe, comfortable and clean environment. </p>
+                   the best experience for dogs, Simin operates in a safe, comfortable and clean environment. She treats each dog
+                   with love and respect as if they were her own! </p>
                 <h3>Jojo</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pharetra nonummy pede. Mauris et orci. Aenean nec lorem. In porttitor. Donec laoreet nonummy augue. Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Mauris eget neque at sem venenatis eleifend. Ut nonummy. Fusce aliquet pede non pede. Suspendisse dapibus lorem pellentesque magna. Integer nulla. Donec blandit feugiat ligula. Donec hendrerit, felis et imperdiet euismod, purus ipsum pretium metus, in lacinia nulla nisl eget sapien.</p>
+                <p>At 13 years old, Jojo is still healthy and bursting with energy.  As a border-collie, Jojo loves chasing crows 
+                   and squirrels. She adores making friends and playing with other dogs. If there is a chance to go out for a walk,
+                   Jojo will find her leash and beat you to the door. With her lovable nature, it's hard not to like her! </p>
 			</div>
         </div>
-		<footer>
+		<footer> 
 		    <div id="footernav">
                 <ul>
                     <li><a href="signIn.html">Sign in / Register</a></li>
