Fixed hyperlinks for the pricing, booking and faqs

--- a/services.html
+++ b/services.html
@@ -45,11 +45,11 @@
                 <!--Three sections explaining the services.-->
 				<h2>Services</h2>
                 <div id="services">
-                    <h3><a href="pricing.html">Pricing</a></h3> 
+                    <h3><a href="Services/pricing.html">Pricing</a></h3> 
                     <p>The is where you can find the general prices for dog grooming.</p>
-                    <h3><a href="booking.html">Booking</a></h3>
+                    <h3><a href="Services/booking.html">Booking</a></h3>
                     <p>Booking lets you book appointments for your dogs.</p>
-                    <h3><a href="faqs.html">FAQs</a></h3>
+                    <h3><a href="Services/faqs.html">FAQs</a></h3>
                     <p>Have questions? FAQ's has many of the answers you need.</p>
                 </div>
 			</div>
