--- a/services.html
+++ b/services.html
@@ -61,9 +61,9 @@
                     <li><a href="aboutUs.html">About Us</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="services.html">Services</a>
-                    <li><a href="pricing.html">Pricing</a></li>
-					<li><a href="booking.html">Booking</a></li>
-					<li><a href="faqs.html">FAQs</a></li>
+                    <li><a href="Services/pricing.html">Pricing</a></li>
+					<li><a href="Services/booking.html">Booking</a></li>
+					<li><a href="Services/faqs.html">FAQs</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
             </div>
