--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						    <ul>
                                 <li><a href="Services/pricing.html">Pricing</a></li>
 					            <li><a href="Services/booking.html">Booking</a></li>
-					            <li><a href="Services/faqs.html">FAQs</a></li>
+					            <li><a href="Services/faqss.html">FAQs</a></li>
                             </ul>
 			            </div></li>
                     <li><a href="contactus.html">Contact Us</a></li>
