--- a/aboutUs.html
+++ b/aboutUs.html
@@ -48,7 +48,7 @@
                    Simin has received her PIJAC Canine Specialist Certification and is a Certified Canine Specialist. She 
                    also has her Pet First Aid Certificate and her Professional Pet Groomer Career Diploma. </p>
                 <h3>Jojo</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pharetra nonummy pede. Mauris et orci. Aenean nec lorem. In porttitor. Donec laoreet nonummy augue. Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Mauris eget neque at sem venenatis eleifend. Ut nonummy. Fusce aliquet pede non pede. Suspendisse dapibus lorem pellentesque magna. Integer nulla. Donec blandit feugiat ligula. Donec hendrerit, felis et imperdiet euismod, purus ipsum pretium metus, in lacinia nulla nisl eget sapien.</p>
+                <p>Jojo is an eight years old border-collie. </p>
 			</div>
         </div>
 		<footer>
