--- a/Services/Pricing.html
+++ b/Services/Pricing.html
@@ -88,12 +88,24 @@
 			</div>
         </div>
 		<footer>
-		    <p>Follow us:</p>
-            <p><a href="#"><img src="../Images/facebook.png"
+		    <div id="footernav">
+                <ul>
+                    <li><a href="../signIn.html">Sign in / Register</a></li>
+                    <li><a href="../aboutus.html">About Us</a></li>
+                    <li><a href="../testimonials.html">Testimonials</a></li>
+                    <li><a href="../services.html">Services</a>
+                    <li><a href="pricing.html">Pricing</a></li>
+					<li><a href="booking.html">Booking</a></li>
+					<li><a href="faqs.html">FAQs</a></li>
+                    <li><a href="../contactus.html">Contact Us</a></li>
+                </ul>
+            </div>
+            <p>Follow us:</p>
+            <p><a href="#"><img src="Images/facebook.png"
                  width="50" height="50" alt="Facebook"></a>
-                <a href="#"><img src="../Images/instagram.png"
+                <a href="#"><img src="Images/instagram.png"
                  width="50" height="50" alt="instagram"></a>
-                <a href="#"><img src="../Images/twitter.png"
+                <a href="#"><img src="Images/twitter.png"
                  width="50" height="50" alt="Twitter"></a></p>
 		</footer>
     </body>
