changed dog images

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en">
     <head>
@@ -47,7 +47,7 @@
             <div id="leftcol">
 				<h2>Welcome</h2>
                 <p>Here at Jojo’s Dog Grooming, your dog’s well-being is our top concern. Our certified groomer uses top of the line products to ensure that your pups will leave healthy, smelling and feeling amazing. Your dog will always have a day of tail-wagging fun when you choose Jojo’s Dog Grooming. When you bring your dog to the groomers, you expect exceptional service, along with reasonable and affordable prices. That’s why at Jojo’s Dog Grooming, we provide the utmost attention to your dog’s needs.</p>
-				<img src="Images/placeholder.jpg" alt="Place image here">
+				<img src="Images/poodle.png" alt="poodle" height="300" width="300">
 			</div>
             
 			<div id="rightcol">
