--- a/signIn.html
+++ b/signIn.html
@@ -54,7 +54,7 @@
 					<br>
 					<input type="submit" value="Sign In">
 				</form>
-				<img src="Images/placeholder.jpg" height="250" width="250" alt="placeholder">
+				<img src="Images/alaskanEskimo.png" height="250" width="250" alt="alaskan eskimo">
 			</div>
 			<div id="rightcol">
 				<!--Regstration form begins here-->
