--- a/Services/FAQs.html
+++ b/Services/FAQs.html
@@ -38,7 +38,7 @@
         <div id="content">
             <div id="leftcol">
 				<p>Find the answers to your questions here!<p>
-				<img src="../Images/placeholder.jpg" alt="add image here" width="250" height="250">
+				<img src="../Images/havanese.png" alt="havanese.png" width="250" height="250">
 			</div>
             
             <div id="rightcol">
