--- a/Services/booking.html
+++ b/Services/booking.html
@@ -38,7 +38,7 @@
         <div id="content">
             <div id="leftcol">
                 <p>Book your appointment today!</p>
-                <img src="../Images/placeholder.jpg" alt="add image here" width="250" height="250">
+                <img src="../Images/papillon.png" alt="papillon" width="250" height="250">
             </div>
             <div id="rightcol">
                 <!-- 
