--- a/contactus.html
+++ b/contactus.html
@@ -71,7 +71,7 @@
                 <!-- This is an image of another dog. The picture will be 
                 changed in the future.
                 -->
-                <img src="Images/placeholder.jpg" alt="Place image here" width="250" height="250">
+                <img src="Images/maltese.png" alt="maltese" width="250" height="250">
 
             </div>
             
