Fixed footer icons.

--- a/Services/booking.html
+++ b/Services/booking.html
@@ -85,11 +85,11 @@
                 </ul>
             </div>
             <p>Follow us:</p>
-            <p><a href="#"><img src="Images/facebook.png"
+            <p><a href="#"><img src="../Images/facebook.png"
                  width="50" height="50" alt="Facebook"></a>
-                <a href="#"><img src="Images/instagram.png"
+                <a href="#"><img src="../Images/instagram.png"
                  width="50" height="50" alt="instagram"></a>
-                <a href="#"><img src="Images/twitter.png"
+                <a href="#"><img src="../Images/twitter.png"
                  width="50" height="50" alt="Twitter"></a></p>
 		</footer>
     </body>
