added a picture to the pricing page.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
             <!--Welcome section-->
             <div id="leftcol">
 				<h2>Welcome</h2>
-                <p>Here at Jojo’s Dog Grooming, your dog’s well-being is our top concern. Our certified groomer uses top of the line products to ensure that your pups will leave healthy, smelling and feeling amazing. Your dog will always have a day of tail-wagging fun when you choose Jojo’s Dog Grooming. When you bring your dog to the groomers, you expect exceptional service, along with reasonable and affordable prices. That’s why at Jojo’s Dog Grooming, we provide the utmost attention to your dog’s needs.</p>
+                <p>Here at <strong>Jojo’s Dog Grooming,</strong> your dog’s well-being is our top concern.</p>
+                <p>Our <strong>certified groomer</strong> uses top of the line products to ensure that your pups will leave healthy, 
+                smelling and feeling amazing.</p>
+                <p>Your dog will always have a day of <strong>tail-wagging fun</strong> when you choose
+                <strong>Jojo’s Dog Grooming.</strong></p>
+                <p>When you bring your dog to the groomers, you expect <strong>exceptional service</strong>,
+                along with reasonable and <strong>affordable prices.</strong></p>
+                <p>That’s why at <strong>Jojo’s Dog Grooming,</strong> we provide the
+                utmost attention to your dog’s needs.</p>
 				<img src="Images/poodle.png" alt="poodle" height="300" width="300">
 			</div>
             
@@ -60,7 +68,7 @@
                 <p>Take a look around. <a href="sign.html">Register</a> and sign in to the site to receive news, deals and special offers.</p>
                 <p>You can now book your appointments online through our <a href="Services/booking.html">Booking</a> page.</p>
                 <p>Check out our <a href="Services/Pricing.html">Pricing</a> page for a list of dog services we are providing.</p>
-                <p>Our <a href="Services/FAQs.html">FAQs</a> page will answer our most frequently asked questions.</p>
+                <p>Our <a href="Services/faqs.html">FAQs</a> page will answer our most frequently asked questions.</p>
 			</div>
         </div>
 
