--- a/Services/Pricing.html
+++ b/Services/Pricing.html
@@ -85,6 +85,7 @@
                         <td></td>
                     </tr>
                 </table>
+                <img src="../Images/cockerSpaniel.png" alt="cockerspaniel" height="300" width="300" id="cockerspaniel">
 			</div>
         </div>
 		<footer>
