Removed checking after each box

--- a/accountEdit.html
+++ b/accountEdit.html
@@ -49,37 +49,37 @@
 					    <div id="firstmsg" style="color:Red;display:none">Please enter your first name</div>
 						<label for="firstname">First Name:</label>
 						<br>
-						<input type="text" name="firstname" id="firstname" size="60" required="required" onblur="validateFirstName()" onfocus="focusFirstName()">
+						<input type="text" name="firstname" id="firstname" size="60" required="required">
 						<br>
 						<br>
 					    <div id="lastmsg" style="color:Red;display:none">Please enter your last name</div>
 						<label for="lastname">Last Name:</label>
 						<br>
-						<input type="text" name="lastname" id="lastname" size="60" required="required" onblur="validateLastName()" onfocus="focusLastName()">
+						<input type="text" name="lastname" id="lastname" size="60" required="required">
 						<br>
 						<br>
 					    <div id="phonemsg" style="color:Red;display:none">Please enter a valid phone number ex:1234567890</div>
 						<label for="phone">Phone Number:</label>
 						<br>
-						<input type="text" name="phone" id="phone" size="60" required="required" onblur="validatePhone()" onfocus="focusPhone()">
+						<input type="text" name="phone" id="phone" size="60" required="required">
 						<br>
 						<br>
 					    <div id="emailregmsg" style="color:Red;display:none">Please enter a valid email address</div>
                         <label for="email">Email:</label>
 					    <br>
-					    <input type="text" name="registeremail" id="registeremail" size="30" required="required" onblur="validateRegEmail()" onfocus="focusRegEmail()">
+					    <input type="text" name="registeremail" id="registeremail" size="30" required="required">
 						<br>
 						<br>
 					    <div id="passregmsg" style="color:Red;display:none">Please enter a password</div>
 						<label for="pass">Password:</label>
 						<br>
-						<input type="password" name="pass" id="pass" size="60" required="required" onblur="validateRegPassword()" onfocus="focusRegPassword()">
+						<input type="password" name="pass" id="pass" size="60" required="required">
 						<br>
 						<br>
 					    <div id="passconmsg" style="color:Red;display:none">Password does not match</div>
 						<label for="confirmpass">Confirm Password:</label>
 						<br>
-						<input type="password" name="confirmpass" id="confirmpass" size="60" required="required" onblur="validateConPassword()" onfocus="focusConPassword()">
+						<input type="password" name="confirmpass" id="confirmpass" size="60" required="required">
 					</fieldset>
 					<br>
 					<fieldset>
@@ -87,17 +87,17 @@
 					    <div id="dogmsg" style="color:Red;display:none">Please enter your dog's name</div>
 						<label for="dogname">Dog Name:</label>
 						<br>
-						<input type="text" name="dogname" id="dogname" size="60" required="required" onblur="validateDog()" onfocus="focusDog()">
+						<input type="text" name="dogname" id="dogname" size="60" required="required">
 						<br>
 						<br>
 					    <div id="breedmsg" style="color:Red;display:none">Please enter your dog's breed</div>
 						<label for="dogbreed">Dog Breed:</label>
 						<br>
-						<input type="text" name="dogbreed" id="dogbreed" size="60" required="required" onblur="validateBreed()" onfocus="focusBreed()">
+						<input type="text" name="dogbreed" id="dogbreed" size="60" required="required">
 						<br>
 						<br>
 						<!--link adds another dog field for registration form-->
-						<a href="#">Add Dog</a>
+						<input type="button" value="Add Dog" onclick="">
 					</fieldset>
 					<br>
 					<input type="submit" value="Save Changes">
