Pricing table made pretty

--- a/Services/Pricing.html
+++ b/Services/Pricing.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Pricing</title>
         <link rel="stylesheet" href="../Style/base.css" media="screen">
-        <link rel="stylesheet" href="../Style/printstyle.css" media="print">
+        <link rel="stylesheet" href="../Style/printStyle.css" media="print">
     </head>
     
     <body>
@@ -55,14 +55,14 @@
             <!--Creates pricing table-->
 			<div id="rightcol">
 				<h2>Pricing</h2>
-                <table>
+                <table id="pricetable">
                     <tr>
 						<th>Size</th>
                         <th>Basics</th>
                         <th>Full Groom</th>
                     </tr>
 					<tr>
-						<td colspan="3">&nbsp;</td>
+						<!--<td colspan="3">&nbsp;</td>-->
 					</tr>
                     <tr>
                         <td>Small Dogs</td>
@@ -85,6 +85,7 @@
                         <td></td>
                     </tr>
                 </table>
+                </div>
 			</div>
         </div>
 		<footer>
