Edited list in pricing

--- a/Services/Pricing.html
+++ b/Services/Pricing.html
@@ -38,7 +38,8 @@
 		<div id="content">
             <!--Lists services in an unordered list-->
             <div id="leftcol">
-				<p>We offer many services here at Jojo's, including:</p>
+				<p><strong>We offer many services here at Jojo's, including:</strong></p>
+                <div id="serviceli">
                 <ul>
                     <li>Hair Clipping</li>
                     <li>Bathing</li>
@@ -51,6 +52,7 @@
                     <li>De-Matting</li>
                     <li>De-Skunking</li>
                 </ul>
+                </div>
 			</div>
             <!--Creates pricing table-->
 			<div id="rightcol">
