--- a/Services/Pricing.html
+++ b/Services/Pricing.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <title>Jojo's Dog Grooming - Pricing</title>
         <link rel="stylesheet" href="../Style/base.css" media="screen">
-        <link rel="stylesheet" href="../Style/printstyle.css" media="print">
+        <link rel="stylesheet" href="../Style/printStyle.css" media="print">
     </head>
     
     <body>
@@ -38,7 +38,8 @@
 		<div id="content">
             <!--Lists services in an unordered list-->
             <div id="leftcol">
-				<p>We offer many services here at Jojo's, including:</p>
+				<p><strong>We offer many services here at Jojo's, including:</strong></p>
+                <div id="serviceli">
                 <ul>
                     <li>Hair Clipping</li>
                     <li>Bathing</li>
@@ -51,18 +52,19 @@
                     <li>De-Matting</li>
                     <li>De-Skunking</li>
                 </ul>
+                </div>
 			</div>
             <!--Creates pricing table-->
 			<div id="rightcol">
 				<h2>Pricing</h2>
-                <table>
+                <table id="pricetable">
                     <tr>
 						<th>Size</th>
                         <th>Basics</th>
                         <th>Full Groom</th>
                     </tr>
 					<tr>
-						<td colspan="3">&nbsp;</td>
+						<!--<td colspan="3">&nbsp;</td>-->
 					</tr>
                     <tr>
                         <td>Small Dogs</td>
@@ -85,6 +87,8 @@
                         <td></td>
                     </tr>
                 </table>
+                <img src="../Images/cockerSpaniel.png" alt="cockerspaniel" height="300" width="300" id="cockerspaniel">
+                </div>
 			</div>
         </div>
 		<footer>
