--- a/signIn.html
+++ b/signIn.html
@@ -43,13 +43,13 @@
 					<div id="emailmsg" style="color:Red;display:none">Please enter a valid email address</div>
                     <label for="email">Email:</label>
 					<br>
-					<input type="text" name="signinemail" id="signinemail" size="30" required="required" onblur="validateEmail()" onfocus="focusEmail()">
+					<input type="text" name="signinemail" id="signinemail" size="30" required="required">
 					<br>
 					<br>
 					<div id="passmsg" style="color:Red;display:none">Please enter a password</div>
 					<label for="password">Password:</label>
 					<br>
-					<input type="password" name="password" id="password" size="30" required="required" onblur="validatePassword()" onfocus="focusPassword()"> 
+					<input type="password" name="password" id="password" size="30" required="required"> 
 					<br>
 					<br>
 					<input type="submit" value="Sign In">
@@ -65,37 +65,37 @@
 					    <div id="firstmsg" style="color:Red;display:none">Please enter your first name</div>
 						<label for="firstname">First Name:</label>
 						<br>
-						<input type="text" name="firstname" id="firstname" size="60" required="required" onblur="validateFirstName()" onfocus="focusFirstName()">
+						<input type="text" name="firstname" id="firstname" size="60" required="required">
 						<br>
 						<br>
 					    <div id="lastmsg" style="color:Red;display:none">Please enter your last name</div>
 						<label for="lastname">Last Name:</label>
 						<br>
-						<input type="text" name="lastname" id="lastname" size="60" required="required" onblur="validateLastName()" onfocus="focusLastName()">
+						<input type="text" name="lastname" id="lastname" size="60" required="required">
 						<br>
 						<br>
 					    <div id="phonemsg" style="color:Red;display:none">Please enter a valid phone number ex:1234567890</div>
 						<label for="phone">Phone Number:</label>
 						<br>
-						<input type="text" name="phone" id="phone" size="60" required="required" onblur="validatePhone()" onfocus="focusPhone()">
+						<input type="text" name="phone" id="phone" size="60" required="required">
 						<br>
 						<br>
 					    <div id="emailregmsg" style="color:Red;display:none">Please enter a valid email address</div>
                         <label for="email">Email:</label>
 					    <br>
-					    <input type="text" name="registeremail" id="registeremail" size="30" required="required" onblur="validateRegEmail()" onfocus="focusRegEmail()">
+					    <input type="text" name="registeremail" id="registeremail" size="30" required="required">
 						<br>
 						<br>
 					    <div id="passregmsg" style="color:Red;display:none">Please enter a password</div>
 						<label for="pass">Password:</label>
 						<br>
-						<input type="password" name="pass" id="pass" size="60" required="required" onblur="validateRegPassword()" onfocus="focusRegPassword()">
+						<input type="password" name="pass" id="pass" size="60" required="required">
 						<br>
 						<br>
 					    <div id="passconmsg" style="color:Red;display:none">Password does not match</div>
 						<label for="confirmpass">Confirm Password:</label>
 						<br>
-						<input type="password" name="confirmpass" id="confirmpass" size="60" required="required" onblur="validateConPassword()" onfocus="focusConPassword()">
+						<input type="password" name="confirmpass" id="confirmpass" size="60" required="required">
 					</fieldset>
 					<br>
 					<fieldset>
@@ -103,13 +103,13 @@
 					    <div id="dogmsg" style="color:Red;display:none">Please enter your dog's name</div>
 						<label for="dogname">Dog Name:</label>
 						<br>
-						<input type="text" name="dogname" id="dogname" size="60" required="required" onblur="validateDog()" onfocus="focusDog()">
+						<input type="text" name="dogname" id="dogname" size="60" required="required">
 						<br>
 						<br>
 					    <div id="breedmsg" style="color:Red;display:none">Please enter your dog's breed</div>
 						<label for="dogbreed">Dog Breed:</label>
 						<br>
-						<input type="text" name="dogbreed" id="dogbreed" size="60" required="required" onblur="validateBreed()" onfocus="focusBreed()">
+						<input type="text" name="dogbreed" id="dogbreed" size="60" required="required">
 						<br>
 						<br>
 						<!--link adds another dog field for registration form-->
@@ -127,9 +127,9 @@
                     <li><a href="aboutUs.html">About Us</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="services.html">Services</a>
-                    <li><a href="Services/pricing.html">Pricing</a></li>
-					<li><a href="Services/booking.html">Booking</a></li>
-					<li><a href="Services/faqs.html">FAQs</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+					<li><a href="booking.html">Booking</a></li>
+					<li><a href="faqs.html">FAQs</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
             </div>
